# ai_engineer_interviewer

./: .env.example  README.md  main.py  pyproject.toml
backend/app/: main.py
backend/app/agents/: difficulty_controller.py  evaluator.py  report_generator.py
backend/app/audio/: stt.py  tts.py
backend/app/graph/: state.py  workflow.py
backend/app/graph/nodes/: ask_question.py  evaluate.py  report.py  transcribe.py
backend/app/prompts/: interviewer.py
backend/app/schemas/: interview.py
backend/tests/: test_smoke.py
frontend/: app.py
