[project]
name = "ai-interviewer-agent"
version = "0.1.0"
description = "Real-time adaptive AI engineering interviewer with voice, LangGraph orchestration, and automated evaluation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "langgraph>=1.2.0",
    "langsmith>=0.8.5",
    "numpy>=2.4.6",
    "openai>=2.37.0",
    "pydantic>=2.13.4",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "sounddevice>=0.5.5",
    "streamlit>=1.57.0",
    "uvicorn>=0.47.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
